--- a/src/app/pages/log-work/swiper/swiper.component.html
+++ b/src/app/pages/log-work/swiper/swiper.component.html
@@ -71,9 +71,9 @@
         </ng-container>
     </swiper-container>
 
-    <ion-item-group>
+    <ion-buttons>
         <ion-button expand="block" (click)="save()">
             <ion-text>Save</ion-text>
         </ion-button>
-    </ion-item-group>
+    </ion-buttons>
 </ion-content>
