--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -5,7 +5,30 @@
 
         ion-card {
             border-radius: 15px;
-            box-shadow: 5px 3px 10px 6px var(--ion-color-shadow01);
+            box-shadow: 2px 2px 15px 2px var(--ion-color-shadow01);
+
+            // opacity: 0; // start out invisible
+            // animation: fadeIn 0.3s ease-in forwards;
+
+            // animation-delay: calc(var(--i) * 0.2s);
         }
+    }
+}
+
+@keyframes fadeIn {
+    0% {
+        opacity: 0;
+    }
+    25% {
+        opacity: 0.25;
+    }
+    50% {
+        opacity: 0.5;
+    }
+    75% {
+        opacity: 0.75;
+    }
+    100% {
+        opacity: 1;
     }
 }
