--- a/src/app/pages/log-work/form/components/date-picker-modal/date-picker-modal.component.scss
+++ b/src/app/pages/log-work/form/components/date-picker-modal/date-picker-modal.component.scss
@@ -6,7 +6,7 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-		
+
         ion-datetime {
             button {
                 font-size: 23px;
@@ -22,20 +22,26 @@
                     font-family: var(--ion-font-family-semibold);
                     font-size: 14px;
                     text-transform: capitalize;
-                    color: var(--ion-color-dark-04);
+                    --color: var(--ion-color-dark-02);
                     --background: none;
                     --ripple-color: transparent;
 
                     &.cancel-button {
-                        color: var(--ion-color-primary-tint);
+                        padding: 11px;
+                        margin: 0 5px;
+                        font-size: 14px;
+                        font-family: var(--ion-font-family-semibold);
+                        background-color: transparent;
                     }
 
                     &.save-button {
-                        color: var(--ion-color-light-08);
-                        --background: var(--ion-color-primary-tint);
-                        --border-radius: 22px;
-                        width: 120px;
-                        height: 50px;
+                        border-radius: 22px;
+                        padding: 11px;
+                        margin: 0 5px;
+                        font-size: 14px;
+                        font-family: var(--ion-font-family-semibold);
+                        background-color: transparent;
+                        box-shadow: 0px 2px 10px 1px var(--ion-color-shadow01);
                     }
                 }
             }
