--- a/src/app/pages/log-work/swiper/swiper.component.scss
+++ b/src/app/pages/log-work/swiper/swiper.component.scss
@@ -46,5 +46,22 @@
             right: 0;
             z-index: 1;
         }
+
+        ion-buttons {
+            // display: flex;
+            // justify-content: center;
+
+            ion-button {
+                width: 100%;
+                padding: 11px;
+                margin: 0 5px;
+                border-radius: 8px;
+                font-size: 18px;
+                font-family: var(--ion-font-family-bold);
+                --color: var(--ion-color-light-07);
+                background-color: var(--ion-color-primary-tint);
+                box-shadow: 0px 2px 10px 1px var(--ion-color-shadow01);
+            }
+        }
     }
 }
