--- a/src/app/pages/setup/containers/setup-doctor/add-edit-doctor.ts/add-edit-doctor.component.scss
+++ b/src/app/pages/setup/containers/setup-doctor/add-edit-doctor.ts/add-edit-doctor.component.scss
@@ -30,7 +30,7 @@
                     }
                 }
             }
-        };
+        }
     }
     form {
         padding-bottom: 70px;
@@ -51,6 +51,10 @@
                 --background: var(--ion-color-primary-tint);
                 position: relative;
                 transform: translate(-40px, 20px);
+
+                font-size: 14px;
+                font-family: var(--ion-font-family-semibold);
+                --color: var(--ion-color-dark-02);
 
                 ion-icon {
                     --color: var(--ion-color-light-08);
