--- a/src/global.scss
+++ b/src/global.scss
@@ -37,14 +37,6 @@
     --ion-text-color: #62545d;
     --ion-text-color-rgb: 136, 19, 55;
 
-    --ion-color-theme: #8f73a7;
-    --ion-color-theme-warning: #c9765f;
-    --ion-color-theme-rgb: 143, 115, 167;
-    --ion-color-theme-contrast: #000000;
-    --ion-color-theme-contrast-rgb: 0, 0, 0;
-    --ion-color-theme-shade: #7e6593;
-    --ion-color-theme-tint: #9a81b0;
-
     --ion-color-step-50: #f9e6e9;
     --ion-color-step-100: #f3dbdf;
     --ion-color-step-150: #edd0d6;
@@ -190,4 +182,6 @@ ion-checkbox::part(container) {
 
 .action-sheet .action-sheet-group {
     background: #e5e5e5;
+    font-family: var(--ion-font-family-semibold);
+    --color: var(--ion-color-dark-02);
 }
