adds country code masking to phone number; adds zoom restriction on accesibility

--- a/src/app/pages/setup/containers/setup-doctor/add-edit-doctor.ts/add-edit-doctor.component.html
+++ b/src/app/pages/setup/containers/setup-doctor/add-edit-doctor.ts/add-edit-doctor.component.html
@@ -25,9 +25,23 @@
         <ion-item>
             <ion-input
                 label="Phone"
+                [maskito]="phoneMaskObs$ | async"
+                [maskitoElement]="maskPredicate"
                 labelPlacement="floating"
                 formControlName="phone"
             >
+                <ion-select
+                    aria-label="Country"
+                    [value]="selectedValue.value"
+                    interface="alert"
+                    (ionChange)="setPhoneMask($event)"
+                >
+                    <ion-select-option
+                        [value]="country.value"
+                        *ngFor="let country of countryListIcons"
+                        >{{ country.name }}</ion-select-option
+                    >
+                </ion-select>
             </ion-input>
         </ion-item>
     </form>
