--- a/src/app/pages/setup/containers/setup-doctor/add-edit-doctor.ts/add-edit-doctor.component.scss
+++ b/src/app/pages/setup/containers/setup-doctor/add-edit-doctor.ts/add-edit-doctor.component.scss
@@ -1,18 +1,5 @@
 :host {
-    // &::after {
-    //     position: absolute;
-    //     top: 0;
-    //     right: 0;
-    //     left: 0;
-    //     bottom: auto;
-    //     content: "";
-    //     width: 100%;
-    //     background-color: var(--ion-color-background);
-    //     height: 10vh;
-    //     border-radius: 0 0 30px 30px;
-    // }
     ion-header {
-        // transparent background
         --background: transparent;
         ion-toolbar {
             --background: transparent;
@@ -35,8 +22,10 @@
     form {
         padding-bottom: 70px;
 
-        ion-grid {
-            padding: 0;
+        ion-input {
+            display: flex;
+            align-items: center;
+            justify-content: center;
         }
     }
     ion-footer {
