--- a/src/global.scss
+++ b/src/global.scss
@@ -37,25 +37,25 @@
     --ion-text-color: #62545d;
     --ion-text-color-rgb: 136, 19, 55;
 
-    --ion-color-step-50: #f9e6e9;
-    --ion-color-step-100: #f3dbdf;
-    --ion-color-step-150: #edd0d6;
-    --ion-color-step-200: #e7c5cd;
-    --ion-color-step-250: #e1bac3;
-    --ion-color-step-300: #dbaeba;
-    --ion-color-step-350: #d5a3b1;
-    --ion-color-step-400: #cf98a7;
-    --ion-color-step-450: #c98d9e;
-    --ion-color-step-500: #c48295;
-    --ion-color-step-550: #be778b;
-    --ion-color-step-600: #b86c82;
-    --ion-color-step-650: #b26178;
-    --ion-color-step-700: #ac566f;
-    --ion-color-step-750: #a64b66;
-    --ion-color-step-800: #a03f5c;
-    --ion-color-step-850: #9a3453;
-    --ion-color-step-900: #94294a;
-    --ion-color-step-950: #8e1e40;
+    --ion-color-step-50: #f2f2f2;
+	--ion-color-step-100: #e6e6e6;
+	--ion-color-step-150: #d9d9d9;
+	--ion-color-step-200: #cccccc;
+	--ion-color-step-250: #bfbfbf;
+	--ion-color-step-300: #b3b3b3;
+	--ion-color-step-350: #a6a6a6;
+	--ion-color-step-400: #999999;
+	--ion-color-step-450: #8c8c8c;
+	--ion-color-step-500: #808080;
+	--ion-color-step-550: #737373;
+	--ion-color-step-600: #666666;
+	--ion-color-step-650: #595959;
+	--ion-color-step-700: #4d4d4d;
+	--ion-color-step-750: #404040;
+	--ion-color-step-800: #333333;
+	--ion-color-step-850: #262626;
+	--ion-color-step-900: #191919;
+	--ion-color-step-950: #0d0d0d;
 }
 
 html {
