fixes unknown error on force logout without user email; fixes undefined error on phone number masking; uses mobile number prefixes for masks

--- a/src/app/pages/log-work/form/containers/doctor/doctor.component.html
+++ b/src/app/pages/log-work/form/containers/doctor/doctor.component.html
@@ -54,10 +54,11 @@
             </ion-grid>
         </ion-item-group>
 
-        <ion-buttons>
+        <ion-buttons class="timeTracking">
             <app-add-button
                 [buttonIcon]="'arrow-forward-outline'"
                 [buttonLabel]="'Time Tracking'"
+                [isExpanded]="true"
                 (emitButtonPressed)="goToTimeTracking()"
             />
         </ion-buttons>
