--- a/src/app/shared/components/add-button/add-button.component.scss
+++ b/src/app/shared/components/add-button/add-button.component.scss
@@ -8,5 +8,9 @@
         --color: var(--ion-color-dark-02);
         background-color: transparent;
         box-shadow: 0px 2px 10px 1px var(--ion-color-shadow01);
+
+        ion-icon {
+            font-size: 20px;
+        }
     }
 }
