manual test of new flow control syntax; fixes styling based on v8 ionic

--- a/src/app/pages/register/register.page.html
+++ b/src/app/pages/register/register.page.html
@@ -75,9 +75,9 @@
             >{{'register-page.go-to-login' | translate }}</ion-button
         >
 
-        <!-- checkbox for terms and conditions with external link to page -->
         <ion-item lines="none">
             <ion-checkbox
+                justify="start"
                 label-placement="end"
                 formControlName="termsAndConditions"
                 style="margin-right: 10px"
@@ -85,9 +85,6 @@
                 I agree to the
                 <a (click)="openTaCSite()">Terms and Conditions</a>
             </ion-checkbox>
-            <!-- <ion-label (click)="openTaCSite()">
-                I agree to the <a>Terms and Conditions</a>
-            </ion-label> -->
         </ion-item>
     </form>
 </ion-content>
