--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,19 +1,20 @@
-<ion-header  no-border no-shadow class="ion-no-border">
+<ion-header no-border no-shadow class="ion-no-border">
     <ion-toolbar class="title" lines="none">
         <ion-buttons slot="start">
-            <ion-button *ngIf="backBtnEnabled" (click)="goBack()">
+            @if (backBtnEnabled){
+            <ion-button (click)="goBack()">
                 <ion-icon name="chevron-back-outline" size="large"></ion-icon>
             </ion-button>
+            }
         </ion-buttons>
         <ion-buttons slot="end">
-            <ion-button
-                *ngIf="settingsEnabled"
-                (click)="presentPopover($event)"
-            >
+            @if (settingsEnabled) {
+            <ion-button (click)="presentPopover($event)">
                 <ion-icon name="settings-outline" size="large"></ion-icon>
             </ion-button>
+            }
         </ion-buttons>
-        <ion-title>{{ title }}</ion-title>
+        <ion-title>{{ title() }}</ion-title>
     </ion-toolbar>
     <div
         class="custom-shape-divider-top-1707164763"
